--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,4 +1,4 @@
-@article{RICCI1995541,
+@article{compactGratingDiodeLaser,
 title = {A compact grating-stabilized diode laser system for atomic physics},
 journal = {Optics Communications},
 volume = {117},
@@ -10,4 +10,12 @@ doi = {https://doi.org/10.1016/0030-4018(95)00146-Y},
 url = {https://www.sciencedirect.com/science/article/pii/003040189500146Y},
 author = {L. Ricci and M. Weidemüller and T. Esslinger and A. Hemmerich and C. Zimmermann and V. Vuletic and W. König and T.W. Hänsch},
 abstract = {We describe a compact, economic and versatile diode laser system based on commercial laser diodes, optically stabilized by means of feedback from a diffraction grating. We offer detailed information which should enable the reader to copy our set-up which uses only easily machined mechanical parts. Our system offers single-mode operation with a linewidth of a few 100 kHz, continuous scans over 25 GHz, high chirp rates (up to 9 GHz/ms) and FM-modulation up to the GHz range. We discuss radio-frequency phase-locking of two independent lasers systems, allowing well controlled fast frequency switching which overcomes the limitations imposed by acousto-optic modulators.}
+}
+
+@book{fundamentalsOfPhotonics,
+  title     = "Fundamentals of Photonics",
+  author    = "B.E.A. Saleh, M.C. Teich",
+  year      = 2019,
+  publisher = "Wiley",
+  address   = "USA"
 }
