Updates from Overleaf

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,6 +12,48 @@ author = {L. Ricci and M. Weidemüller and T. Esslinger and A. Hemmerich and C. 
 abstract = {We describe a compact, economic and versatile diode laser system based on commercial laser diodes, optically stabilized by means of feedback from a diffraction grating. We offer detailed information which should enable the reader to copy our set-up which uses only easily machined mechanical parts. Our system offers single-mode operation with a linewidth of a few 100 kHz, continuous scans over 25 GHz, high chirp rates (up to 9 GHz/ms) and FM-modulation up to the GHz range. We discuss radio-frequency phase-locking of two independent lasers systems, allowing well controlled fast frequency switching which overcomes the limitations imposed by acousto-optic modulators.}
 }
 
+@article{20MHzEOM,
+author = {Mok, Charlie and Weel, Matthew and Rotberg, E and Kumarakrishnan, A},
+year = {2011},
+month = {02},
+pages = {775-786},
+title = {Design and construction of an efficient electro-optic modulator for laser spectroscopy},
+volume = {84},
+journal = {Canadian Journal of Physics},
+doi = {10.1139/p06-074}
+}
+
+@Article{PDH1983,
+author={Drever, R. W. P.
+and Hall, J. L.
+and Kowalski, F. V.
+and Hough, J.
+and Ford, G. M.
+and Munley, A. J.
+and Ward, H.},
+title={Laser phase and frequency stabilization using an optical resonator},
+journal={Applied Physics B},
+year={1983},
+month={Jun},
+day={01},
+volume={31},
+number={2},
+pages={97-105},
+abstract={We describe a new and highly effective optical frequency discriminator and laser stabilization system based on signals reflected from a stable Fabry-Perot reference interferometer. High sensitivity for detection of resonance information is achieved by optical heterodyne detection with sidebands produced by rf phase modulation. Physical, optical, and electronic aspects of this discriminator/laser frequency stabilization system are considered in detail. We show that a high-speed domain exists in which the system responds to the phase (rather than frequency) change of the laser; thus with suitable design the servo loop bandwidth is not limited by the cavity response time. We report diagnostic experiments in which a dye laser and gas laser were independently locked to one stable cavity. Because of the precautions employed, the observed sub-100 Hz beat line width shows that the lasers were this stable. Applications of this system of laser stabilization include precision laser spectroscopy and interferometric gravity-wave detectors.},
+issn={1432-0649},
+doi={10.1007/BF00702605},
+url={https://doi.org/10.1007/BF00702605}
+}
+
+@article{PDHintro,
+  title={An introduction to Pound–Drever–Hall laser frequency stabilization},
+  author={Eric D. Black},
+  journal={American Journal of Physics},
+  year={2001},
+  volume={69},
+  pages={79-87}
+}
+
 @book{fundamentalsOfPhotonics,
   title     = "Fundamentals of Photonics",
   author    = "B.E.A. Saleh, M.C. Teich",
@@ -19,3 +61,4 @@ abstract = {We describe a compact, economic and versatile diode laser system bas
   publisher = "Wiley",
   address   = "USA"
 }
+
