--- a/main.tex
+++ b/main.tex
@@ -232,7 +232,13 @@ Since we have an intended EOM modulation frequency frequency $f_0$, and the capa
 %TODO: insert measurements of crystal capacitance here
 \par
 After measurement of $C_1$, we can estimate the capacitance of the tank circuit board to be $C' = \frac{C_1C_2}{C_1+C_2} \approx C_1$. This is because $C_1 \gg C_2$ where $C_2$ is a coupling capacitor that will be explained later. The resonant frequency of the tank circuit can be estimated to be $f = \frac{\omega}{2\pi} = \frac{1}{2\pi\sqrt{LC'^2}}$. Rearranging to get $L = \frac{1}{(2\pi f C_1)^2}$, to get a resonant frequency of about 35 MHz, a $2 \micro H$ inductor is needed, the closest off-the-shelf inductor is $2.2 \micro H$. 
-%TODO: insert measurement of 36.7 MHz resonant freq through spectrum analyser here
+
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth]{eom-freq-measurement-setup.png}
+    \caption{EOM frequency measurement setup}
+    \label{fig:eom-freq-measurement-setup.png}
+\end{figure}
 
 
 
